# Ai-Resumes-lens

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  provider.py  registry.py
backend/app/ai/providers/: __init__.py  adapters.py
backend/app/api/: __init__.py  dependencies.py  routes.py
backend/app/ats/: __init__.py  scoring.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py  schemas.py
backend/app/parser/: __init__.py  resume_parser.py
backend/app/prompts/: __init__.py  builder.py
backend/app/repositories/: __init__.py  cache.py
backend/app/response/: __init__.py  parser.py
backend/app/services/: __init__.py  review_service.py
backend/app/tests/: test_ats.py  test_cache.py  test_ollama_provider.py  test_prompts.py  test_provider_registry.py  test_response_parser.py  test_resume_parser.py
backend/app/utils/: __init__.py  resilience.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/new-review/: page.tsx
frontend/app/results/: page.tsx
frontend/components/: navigation.tsx
frontend/lib/: api.ts
