[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-reviewer-backend"
version = "1.0.0"
description = "Provider-independent, async AI Resume Reviewer backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "python-docx>=1.1,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "pymupdf>=1.24,<2.0",
    "pdfplumber>=0.11,<1.0",
    "rapidfuzz>=3.9,<4.0",
    "spacy>=3.7,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.6,<1.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
